# NTER

./: .gitignore  Cantera.py  combineDAT.py  formatDAT.py  main.py
CPUSingleTemporalPath/: CMakeLists.txt
CPUSingleTemporalPath/include/: PathMaker.h
CPUSingleTemporalPath/src/: PathMaker.cpp
SingleTemporalFlame/: CMakeLists.txt
SingleTemporalFlame/include/: PathMaker.cuh
SingleTemporalFlame/src/: PathMaker.cu
TemporalPath/: CMakeLists.txt
TemporalPath/src/: PathMaker.cpp
python/: RES_INFO_READ.txt
python/src/: Cantera.py  FlamePathAnalysis.py  GradAscent.py  MLProgCurv.py  ReadCsv.py  TemporalPath.py  combineDAT.py
src/: 2DTemporalPath.py  Cantera.py  FlamePathAnalysis.py  GradAscent.py  MLProgCurv.py  ProbDistFunc.py  PySinglePath.py  ReadCsv.py  ReadDat.py  SingleTemporalPath.py  TemporalPath.py  combineDAT.py  csvToPkl.py  formatCSV.py  formatDAT.py  main.py  subDAT.py
